crates/solidity/testing/snapshots/bindings_output/using/address/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected CloseParen or Comma.
   ╭─[input.sol:2:32]
   │
 2 │     function sendValue(address payable recipient) internal {}
   │                                ────────┬────────  
   │                                        ╰────────── Error occurred here.
───╯
Error: Expected OpenBracket or Semicolon.
   ╭─[input.sol:5:31]
   │
 5 │     using Address for address payable;
   │                               ───┬───  
   │                                  ╰───── Error occurred here.
───╯
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
   ╭─[input.sol:7:9]
   │
 7 │ ╭─▶         payable(_rcpt).sendValue();
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library Address {
   │         ───┬───  
   │            ╰───── name: 1
 2 │     function sendValue(address payable recipient) internal {}
   │              ────┬────  
   │                  ╰────── name: 2
   │ 
 4 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 3
 5 │     using Address for address payable;
   │           ───┬───  
   │              ╰───── ref: 1
 6 │     function test(address _rcpt) public {
   │              ──┬─         ──┬──  
   │                ╰───────────────── name: 4
   │                             │    
   │                             ╰──── name: 5
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │     ╭─▶ library Address {
 2 │     │       function sendValue(address payable recipient) internal {}
   │     │   ───────────────────────────────┬──────────────────────────────  
   │     │                                  ╰──────────────────────────────── definiens: 2
 3 │ │   ├─▶ }
   │ │   │       
   │ │   ╰─────── definiens: 1
 4 │ ╭─────▶ contract Test {
   ┆ ┆ ┆     
 6 │ │ ╭───▶     function test(address _rcpt) public {
   │ │ │                       ──────┬──────  
   │ │ │                             ╰──────── definiens: 5
   ┆ ┆ ┆     
 8 │ │ ├───▶     }
   │ │ │             
   │ │ ╰───────────── definiens: 4
 9 │ ├─────▶ }
   │ │           
   │ ╰─────────── definiens: 3
───╯
